--- a/baicv.html
+++ b/baicv.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <h1>Front End Developer</h1>
+    <img src="./Vespa-logo.png">
     <p>Name: Phan Cuong</p>
     <p>Adress: HCM</p>
+    <p>Phone: 0000000</p>
+    <a href="https://discord.com/"></a>
     <P>Email: phancuong123@gmail.com</P>
     <p>Education: HH University</p>
     <p>Degree: Good</p>
     <p>Skill: Programming Languages: Front-End </p>
     <p>Experience: I have 5 year IT experience</p>
     <p> Personal development orientation: I want become IT in the field of Front-End</p>
-    
+
 </body>
 </html>
