--- a/baicv.html
+++ b/baicv.html
@@ -7,17 +7,15 @@
 </head>
 <body>
     <h1>Front End Developer</h1>
-    <img src="./Vespa-logo.png">
-    <p>Name: Phan Cuong</p>
-    <p>Adress: HCM</p>
-    <p>Phone: 0000000</p>
-    <a href="https://discord.com/"></a>
-    <P>Email: phancuong123@gmail.com</P>
-    <p>Education: HH University</p>
-    <p>Degree: Good</p>
-    <p>Skill: Programming Languages: Front-End </p>
-    <p>Experience: I have 5 year IT experience</p>
-    <p> Personal development orientation: I want become IT in the field of Front-End</p>
-
+    <img src="./Assets/hinhthe.png", style="width: 150px;height: 100px;">
+    <p><b>Name:</b>Phan Cuong</p>
+    <p><b>Phone:</b>0000000</p>
+    <P><b>Email:</b>phancuong123@gmail.com</P>
+    <p><b>Education:</b>HH University</p>
+    <p><b>Degree:</b>Good</p>
+    <p><b>Skill:</b>Programming Languages Front-End </p>
+    <p><b>Experience:</b> I have 5 year IT experience</p>
+    <p><b>Personal development orientation:</b>I want become IT in the field of Front-End</p>
+    <a href="https://github.com"><b>Link:</b> Git</a>
 </body>
 </html>
