--- a/baicv.html
+++ b/baicv.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <h1>Front End Developer</h1>
-    <img src="./Assets/hinhthe.png", style="width: 150px;height: 100px;">
-    <p><b>Name:</b>Phan Cuong</p>
-    <p><b>Phone:</b>0000000</p>
-    <P><b>Email:</b>phancuong123@gmail.com</P>
-    <p><b>Education:</b>HH University</p>
-    <p><b>Degree:</b>Good</p>
-    <p><b>Skill:</b>Programming Languages Front-End </p>
-    <p><b>Experience:</b> I have 5 year IT experience</p>
-    <p><b>Personal development orientation:</b>I want become IT in the field of Front-End</p>
+    <img src="./Assets/hinhthe.png" style="width: 150px;height: 100px;">
+    <h2><b>Name:</b>Phan Cuong</h2>
+    <h2><b>Phone:</b>0000000</h2>
+    <h2><b>Email:</b>phancuong123@gmail.com</h2>
+    <h2><b>Education:</b>HH University</h2>
+    <h2><b>Degree:</b>Good</h2>
+    <h2><b>Skill:</b>Programming Languages Front-End </h2>
+    <h2><b>Experience:</b> I have 5 year IT experience</h2>
+    <h2><b>Personal development orientation:</b>I want become IT in the field of Front-End</h2>
     <a href="https://github.com"><b>Link:</b> Git</a>
 </body>
 </html>
