--- a/bai_Music.html
+++ b/bai_Music.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MP3</title>
+    <title>Video Player</Video></title>
 </head>
 <style>
     body{
@@ -12,32 +12,27 @@
 </style>
 <body>
 <h1>MP3</h1>
-<P>Music 1</P>
+<h2>Music 1</h2>
 <p>Video play control bar should be display</p>
 <video width="400" height="250" controls>
     <source src="Assets/bunny.mp4" type="video/mp4">
 </video>
-<p>Music 2</p>
+<h2>Music 2</h2>
 <p>Video automatically repeat after each end</p>
 <video width="400" height="250" controls loop>
     <source src="Assets/bunny.mp4" type="video/mp4">
 </video>
-<p>Music 3</p>
+<h2>Music 3</h2>
 <p>Muted video</p>
 <video width="400" height="250" controls muted>
     <source src="Assets/bunny.mp4" type="video/mp4">
 </video>
-<p>Music 4</p>
+<h2>Music 4</h2>
 <p>Auto play video</p>
 <video width="400" height="250" controls autoplay>
     <source src="Assets/bunny.mp4" type="video/mp4">
 </video>
-<p>Music 5</p>
-<p>video not load the same time as the page load</p>
-<video width="400" height="250" preload="none">
-    <source src="Assets/bunny.mp4" type="video/mp4">
-</video>
-<p>Music 6</p>
+<h2>Music 5</h2>
 <p>video load the same time as the page load</p>
 <video width="400" height="250" preload="auto">
     <source src="Assets/bunny.mp4" type="video/mp4">
