--- a/Table/bai_Lich.html
+++ b/Table/bai_Lich.html
@@ -15,22 +15,22 @@
             </table>
             <table class="week" border="1" cellpadding="2" cellspacing="2">
                 <tr>
-                    <th class="color_red_1">Chủ nhật</th>
-                    <th class="color_yellow">Thứ 2</th>
-                    <th class="color_yellow">Thứ 3</th>
-                    <th class="color_yellow">Thứ 4</th>
-                    <th class="color_yellow">Thứ 5</th>
-                    <th class="color_yellow">Thứ 6</th>
-                    <th class="color_blue">Thứ 7</th>
+                    <th class="day_s">Chủ nhật</th>
+                    <th class="day_y">Thứ 2</th>
+                    <th class="day_y">Thứ 3</th>
+                    <th class="day_y">Thứ 4</th>
+                    <th class="day_y">Thứ 5</th>
+                    <th class="day_y">Thứ 6</th>
+                    <th class="day_b">Thứ 7</th>
                 </tr>
                 <tr>
-                    <th class="color_Sun">Sunday</th>
+                    <th class="c_sun">Sunday</th>
                     <th>Monday</th>
                     <th>Tuesday</th>
-                    <th>Wendnesday</th>
+                    <th>Wednesday</th>
                     <th>Thursday</th>
                     <th>Friday</th>
-                    <th class="color_Sat">Saturday</th>
+                    <th class="c_sat">Saturday</th>
                 </tr>
             </table>
             <table border="1" class="calendar">
@@ -41,43 +41,43 @@
                     <td></td>
                     <td>1<sub>13</sub></td>
                     <td>2<sub>14</sub></td>
-                    <td class="solar_calendar_1">3<sub class="color_sub">15</sub></td>
+                    <td class="solar_calendar_sat">3<sub class="color_sub">15</sub></td>
                 </tr>
                 <tr>
-                    <td class="solar_calendar">4<sub class="color_sub">16</sub></td>
+                    <td class="solar_calendar_sun">4<sub class="color_sub">16</sub></td>
                     <td>5<sub>17</sub></td>
                     <td>6<sub>18</sub></td>
                     <td>7<sub>19</sub></td>
                     <td>8<sub>20</sub></td>
                     <td>9<sub>21</sub></td>
-                    <td class="solar_calendar_1">10<sub class="color_sub">22</sub></td>
+                    <td class="solar_calendar_sat">10<sub class="color_sub">22</sub></td>
                 </tr>
                 <tr>
-                    <td class="solar_calendar">11<sub class="color_sub">23</sub></td>
+                    <td class="solar_calendar_sun">11<sub class="color_sub">23</sub></td>
                     <td>12<sub>24</sub></td>
                     <td>13<sub>25</sub></td>
                     <td>14<sub>26</sub></td>
                     <td>15<sub>27</sub></td>
                     <td>16<sub>28</sub></td>
-                    <td class="solar_calendar_1">17<sub class="color_sub">29</sub></td>
+                    <td class="solar_calendar_sat">17<sub class="color_sub">29</sub></td>
                 </tr>
                 <tr>
-                    <td class="solar_calendar">18<sub class="color_sub">1.9</sub></td>
+                    <td class="solar_calendar_sun">18<sub class="color_sub">1.9</sub></td>
                     <td>19<sub>2</sub></td>
                     <td>20<sub>3</sub></td>
                     <td>21<sub>4</sub></td>
                     <td>22<sub>5</sub></td>
                     <td>23<sub>6</sub></td>
-                    <td class="solar_calendar_1">24<sub class="color_sub">7</sub></td>
+                    <td class="solar_calendar_sat">24<sub class="color_sub">7</sub></td>
                 </tr>
                 <tr>
-                    <td class="solar_calendar">25<sub class="color_sub">8</sub></td>
+                    <td class="solar_calendar_sun">25<sub class="color_sub">8</sub></td>
                     <td>26<sub>9</sub></td>
                     <td>27<sub>10</sub></td>
                     <td>28<sub>11</sub></td>
                     <td>29<sub>12</sub></td>
                     <td>30<sub>13</sub></td>
-                    <td class="solar_calendar_1">31<sub class="color_sub">14</sub></td>
+                    <td class="solar_calendar_sat">31<sub class="color_sub">14</sub></td>
                 </tr>
             </table>
         </div>
