--- a/CSS_GridItem/Bai_Grid_Column_Start.html
+++ b/CSS_GridItem/Bai_Grid_Column_Start.html
@@ -15,6 +15,10 @@
                 grid-gap: 10px;
                 background-color: #cae5ec;
                 padding: 15px;
+                /* grid-column-gap:30px;
+                grid-row-gap: 30px;  
+                 kích thước của khoảng cách giữa 
+                 các hàng và cột*/
                 
             }
             .item {
