--- a/Case_Study1/bai_CaseStudy.html
+++ b/Case_Study1/bai_CaseStudy.html
@@ -177,48 +177,48 @@
                         <p>Type</p>
                     </div>
                     <div class="scroll">
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">JACKET</span>
                         </label> 
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">POLO SHIRT</span>
                         </label>
 
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">LONG SLEEVED SHIRT</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">T-SHIRT</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">FOOTWEAR</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">JEANS</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">SHORT</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">SEA SHORT</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">SHORT SLEEP</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">SHORT JEAN</span>
                         </label>
-                        <label class="container-sroll">
+                        <label class="container-scroll">
                             <input type="checkbox">
                             <span class="checkmark">OTHER</span>
                         </label>
